--- a/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
@@ -32,15 +32,15 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Requerimientos", "Create", "ReqFuncional")</li> 
                     <li>@Html.ActionLink("eliminar", "Create", "Proyectos")</li> 
-                    @if (Request.IsAuthenticated)
-                    {
+                    @*if (Request.IsAuthenticated)
+                    {*@
                        
                         <li>@Html.ActionLink("Requerimientos", "Index", "ReqFuncional")</li>
                         <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
                         <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
                         <li>@Html.ActionLink("Proyectos", "Index", "Proyectos")</li>
                        <!--ESTE IF CONTIENE LOS AQUELLAS PESTAÑAS QUE SOLO UN ADMINISTRADOR PODRIA VER-->
-                        /*string[] roles = Roles.GetRolesForUser();
+                        @*string[] roles = Roles.GetRolesForUser();
                         foreach (string role in roles)
                         {
                             if (role.Contains("Administrador"))
@@ -54,8 +54,8 @@
                         /*if (Page.User.IsInRole("Administrador"))
                     {
                       <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
-                    }*/
-                    }    
+                    }*@
+                    @*}*@    
                     <li>@Html.ActionLink("Prueba", "Create", "ReqFuncional")</li>               
                  </ul>
                 @Html.Partial("_LoginPartial")
