--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -2,7 +2,7 @@
 @using ProyectoInge1.Helpers
 <script>
     window.onload = function (e) {
-        desarrolladores = [];
+        desarrolladores = "";
     }
     function Cancelar() {
         if (confirm("Esta seguro que desea borrar este proyecto ?")) {
@@ -28,7 +28,7 @@
                 newOption.selected = true;
                 try {
                     dest.add(newOption, null); //Standard
-                    desarrolladores.push(newOption.value);
+                    desarrolladores=desarrolladores +"/"+(newOption.value);
                     src.remove(count, null);
                 } catch (error) {
                     dest.add(newOption); // IE only
@@ -93,29 +93,13 @@
         </div>
 
     </div>
-        <div class="form-group">
-            @Html.CustomLabelFor(model => model.proyecto.fechaFinal, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.proyecto.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
-            </div>
-        </div>*
+        
         <br />
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-5">
-                <input type="submit" value="Aceptar" class="btn btn-primary" />
-                <div class="form-actions no-color">
-                </div>
-                <div class="btn btn-danger" style="color:white;" />
-                @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
-
-
-            </div>
 
             <br />
             @*cajas de seleccion*@
             <div class="control-label">
-                @Html.CustomLabelFor(model => model.proyecto.lider, htmlAttributes: new { @class = "control-label col-md-2" })
-                @Html.HiddenFor(model => model.Participantes, new { @id = "output" })
 
                 <select name="Lider" type="text" class="form-control col-md-2" id="a" size="2"></select>
 
@@ -150,6 +134,7 @@
                     <select class="form-control col-md-2" style="width:20em; margin-left:2em;" id="d" size="10">
 
                         @*Aqui se insertan los usuarios*@
+                        
                         @foreach (var item in Model.listaUsuarios)
                         {
                             var ced = item.cedula;
