--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Detalles.cshtml
@@ -2,7 +2,7 @@
 
 <script>
     function esconderEditar() {
-        $('.elementoEditar').hide();
+        $('.elementoMostrar').hide();
         $('.elementoModificar').show();
     }
 
@@ -20,7 +20,7 @@
         window.location.replace('../../ReqFuncional/Index/' + elementId)
     }
 
-    function Cancelar() {
+    function CancelarE() {
         if (confirm("Esta seguro que desea borrar este proyecto ?")) {
             return true;
         } else {
@@ -36,37 +36,121 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="elementoEditar">Detalles de Proyecto</h2>
+<h2 class="elementoMostrar">Detalles de Proyecto</h2>
 <h2 class="elementoModificar" style="display:none">Modificación de Proyecto</h2>
+<h4>Proyecto</h4>
+<hr />
+@*------------------------------------------------------mostrar detalles---------------------------------------*@
+<div class="elementoMostrar">
+    <div class="col-lg-2 ">
+        <a class="btn btn-success" " onclick="esconderEditar()">Modificar</a>
+        <div class="col-lg-2 col-lg-push-6">
+                <button type="submit" class="btn btn-danger"style="margin-left:2.5em;" onclick="CancelarE()">Eliminar</button>
+
+            </div>
+    </div>
+    <br /><br /><br />
+    @*nombre*@
+    <div class="form-group">
+        <label class="control-label col-md-2">Nombre:</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.proyecto.nombre, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            @Html.ValidationMessageFor(model => model.proyecto.nombre, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <br /><br />
+    @*Descripcion*@
+    <div class="form-group">
+        <label class="control-label col-md-2">Descripcion:</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.proyecto.descripcion, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            @Html.ValidationMessageFor(model => model.proyecto.descripcion, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <br /><br />
+    @*fecha inicial*@
+    <div class="form-group">
+        <label class="control-label col-md-2">Fecha de Inicio:</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.proyecto.fechaInicio, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            @Html.ValidationMessageFor(model => model.proyecto.fechaInicio, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <br /><br />
+    @*fecha final*@
+    <div class="form-group">
+        <label class="control-label col-md-2">Fecha Final:</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.proyecto.fechaFinal, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            @Html.ValidationMessageFor(model => model.proyecto.fechaFinal, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <br /><br />
+</div>
+@*------------------------------------------------------Modificar detalles---------------------------------------*@
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken(){
-
-        <div class="form-horizontal">
-            <hr />
-            <div class="elementoModificar" style="display:none">
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Aceptar" class="btn btn-primary" />
-                        <a class="btn btn-danger" onclick="cancelar()">Cancelar</a>
+        <div class="elementoModificar" style="display:none">
+            <br /><br /><br />
+            @*nombre*@
+            <div class="form-group">
+                <label class="control-label col-md-2">Nombre:</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.proyecto.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.proyecto.nombre, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <br /><br />
+            @*Descripcion*@
+            <div class="form-group">
+                <label class="control-label col-md-2">Descripcion:</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.proyecto.descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.proyecto.descripcion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <br /><br />
+            @*fecha inicial*@
+            <div class="form-group">
+                <label class="control-label col-md-2">Fecha de Inicio:</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.proyecto.fechaInicio, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.proyecto.fechaInicio, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <br /><br />
+            @*fecha final*@
+            <div class="form-group">
+                <label class="control-label col-md-2">Fecha Final:</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.proyecto.fechaFinal, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.proyecto.fechaFinal, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <br /><br />
+            <div class="form-horizontal">
+                <hr />
+                <div class="elementoModificar" style="display:none">
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Aceptar" class="btn btn-primary" />
+                            <a class="btn btn-danger" onclick="cancelar()">Cancelar</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     }
 }
-@*---------------------------------------Detalles------------------------------------------------*@
-<div class="elementoEditar">
+@*---------------------------------------Esto de aqui no------------------------------------------------*@
+<div class="elementoEditar"style="display:none">
     <div class="form-horizontal">
             <div class="col-lg-2 ">
                 <a class="btn btn-success" style="margin-left:2.5em;" onclick="esconderEditar()">Modificar</a>
             </div>
-            <div class="col-lg-2 " > 
-                <div class="btn btn-danger" style="color:white;" >
-                    @Html.ActionLink("Eliminar", "Index", "Proyectos", new { confirm = true, Proyecto = Model.proyecto.nombre }, new { @style = "color:white;" , @onclick = "return Cancelar();" })
-                </div>
-            </div>
+            
             <div class="col-lg-2 "  style="margin-left:-2.5em;">
                 <a class="btn btn-info" id='@(Model.proyecto.nombre)' onclick="goToReqFun(this)">Requerimientos Funcionales</a>
             </div>
@@ -162,24 +246,24 @@
                         </div><br/><br/>
                         <div class="col-lg-4 col-lg-pull-1">
                             <select class="form-control " style="width:20em;" id="d" size="4">
-                                @{
-                                    var UserProyectList = Model.listaUsuariosProyecto;
-                                    var UserList = Model.listaUsuarios;
-                                    foreach (var userProj in UserProyectList)
-                                    {
-                                        foreach (var user in UserList)
-                                        {
-                                            if (userProj.cedula.Equals(user.cedula))
-                                            {
-                                                <option value=user.cedula>
-                                                    @Html.DisplayFor(modelItem => user.nombre)
-                                                    @Html.DisplayFor(modelItem => user.apellidos)
-                                                    @Html.Raw(" ")
-                                                </option>
-                                            }
-                                        }
-                                    }
-                                }
+                              @*  @{
+        var UserProyectList = Model.listaUsuariosProyecto;
+        var UserList = Model.listaUsuarios;
+        foreach (var userProj in UserProyectList)
+        {
+            foreach (var user in UserList)
+            {
+                if (userProj.cedula.Equals(user.cedula))
+                {
+                    <option value=user.cedula>
+                        @Html.DisplayFor(modelItem => user.nombre)
+                        @Html.DisplayFor(modelItem => user.apellidos)
+                        @Html.Raw(" ")
+                    </option>
+                }
+            }
+        }
+    }*@
                             </select>
                         </div>
                     </div>
