--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -108,51 +108,89 @@ window.onload = load_all
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-md-2">Fuente:</label>
+          
             <div class="col-md-10">
-              @*  @{
-                    var UserProyectList = Model.listaUsuario;
+                <label class="control-label col-md-2">Fuente:</label>
+                @{
+                    
+                    var UserProyectList =  Model.listaUsuario;
                     var UserList = Model.UsuariosSistema;
+
+
                     foreach (var userProj in UserProyectList)
                     {
-                        foreach (var user in UserList)
+                        foreach (var  user in UserList)
                         {
                             if (userProj.cedula.Equals(user.cedula))
                             {
-                                <option value=user.cedula>
-                                    @Html.DropDownListFor(model => model.Requerimientos.fuente, new[] { new SelectListItem() { Text = user.nombre.ToString() + " " + user.apellidos.ToString(), Value = user.cedula } }, "--Fuente no asignada--", new { @class = "form-control" })
-                                </option>
-                                    @* @Html.EditorFor(usr => user.nombre, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
-                            }
+                    <option value=user.cedula>
+                        @Html.DropDownListFor(model => model.Requerimientos.fuente, new[] { new SelectListItem() { Text = user.nombre.ToString() + " " + user.apellidos.ToString(), Value = user.cedula } }, "--Fuente no asignada--", new { @class = "form-control" })
+                    </option>
+            
+                }
                         }
 
                     }
-                }*@
+    }
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-md-2">Responsable 1:</label>
-            <div class="col-md-10">
-                <!--Html.EditorFor(model => model , new { htmlAttributes = new { class = "form-control" } })
-                Html.ValidationMessageFor(model => model.modulo, "", new { class = "text-danger" })-->
+            <div class="col-md-2">
+                @{ var UserProyectList2 = Model.listaUsuario;
+                    var UserList2 = Model.UsuariosSistema;
+
+                    foreach (var userProj2 in UserProyectList2)
+                    {
+                        foreach ( var user2 in UserList2)
+                        {
+                            if (userProj2.cedula.Equals(user2.cedula))
+                            {
+                                <option value=user.cedula>
+                                    @Html.DropDownListFor(model => model.Requerimientos.responsable1, new[] { new SelectListItem() { Text = user2.nombre.ToString() + " " + user2.apellidos.ToString(), Value = user2.cedula } }, "--Fuente no asignada--", new { @class = "form-control" })
+                                </option>
+
+                            }
+                        }
+
+                    }
+                }
 
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-md-2">Responsable 2:</label>
+            <label class="control-label col-md-10">Responsable 2:</label>
             <div class="col-md-10">
+                @{var UserProyectList3 = Model.listaUsuario;
+                    var UserList3 = Model.UsuariosSistema;
+
+                    foreach (var userProj3 in UserProyectList3)
+                    {
+                        foreach (var user3 in UserList3)
+                        {
+                            if (userProj3.cedula.Equals(user3.cedula))
+                            {
+                                <option value=user.cedula>
+                                    @Html.DropDownListFor(model => model.Requerimientos.responsable2, new[] { new SelectListItem() { Text = user3.nombre.ToString() + " " + user3.apellidos.ToString(), Value = user3.cedula } }, "--Fuente no asignada--", new { @class = "form-control" })
+                                </option>
+
+                            }
+                        }
+
+                    }
+                }
                
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-md-2">Fecha Inicial:</label>
+            <label class="control-label col-md-10">Fecha Inicial:</label>
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.Requerimientos.fechaInicial, new { @class = "form-control datepicker", placeholder = "DATE" })
             </div>
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2">Fecha Final:</label>
+            <label class="control-label col-md-10">Fecha Final:</label>
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.Requerimientos.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
             </div>
@@ -160,7 +198,7 @@ window.onload = load_all
 
 
                 @*Criterio De Aceptacion*@
-                <label class="control-label col-md-2">Criterios de aceptacion:</label><br />
+                <label class="control-label col-md-10">Criterios de aceptacion:</label><br />
                 @Html.HiddenFor(model => model.values, new { @id = "output" })
                 <input type="text" id="output" value=" " style="display:none"><br/>
 
@@ -173,7 +211,7 @@ window.onload = load_all
                 @*Criterio De Aceptacion*@
  
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-5">
+                    <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Aceptar" class="btn btn-primary" />
                         <div class="btn btn-danger" style="color:white;" />
                         @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
