--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -107,11 +107,11 @@ window.onload = load_all
                 @Html.ValidationMessageFor(model => model.Requerimientos.imagen, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
           
             <div class="col-md-10">
                 <label class="control-label col-md-2">Fuente:</label>
-                @{
+               @** @{
                     
                     var UserProyectList =  Model.listaUsuario;
                     var UserList = Model.UsuariosSistema;
@@ -131,9 +131,10 @@ window.onload = load_all
                         }
 
                     }
-    }
+    }*@
             </div>
-        </div>
+        </div> -->
+    <!--
         <div class="form-group">
             <label class="control-label col-md-2">Responsable 1:</label>
             <div class="col-md-2">
@@ -160,7 +161,7 @@ window.onload = load_all
         </div>
         <div class="form-group">
             <label class="control-label col-md-10">Responsable 2:</label>
-            <div class="col-md-10">
+            <div class="col-md-10">@*
                 @{var UserProyectList3 = Model.listaUsuario;
                     var UserList3 = Model.UsuariosSistema;
 
@@ -179,9 +180,9 @@ window.onload = load_all
 
                     }
                 }
-               
+               *@
             </div>
-        </div>
+        </div> -->
         <div class="form-group">
             <label class="control-label col-md-10">Fecha Inicial:</label>
             <div class="col-md-10">
